--- a/project/meteoriteAssault_p.html
+++ b/project/meteoriteAssault_p.html
@@ -15,8 +15,19 @@
             <div class="p-4">
                 <h2 class="project-name">MeteoriteAssault Game</h2>
                 <p>
-                    
+                    A 2D shooting game where players will control a spaceship to shoot meteorites.  
                 </p>
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="../res/project/Mete_Ass/python_game2.png" alt="" width="100%">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../res/project/Mete_Ass/python_game.png" alt="" width="100%">
+                    </div>
+                    <div class="col-md-4">
+                        <img src="../res/project/Mete_Ass/python_game3.png" alt="" width="100%">
+                    </div>
+                </div>
             </div>
         </section>
     </div>
