--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row project ps-4 pe-4" onclick="window.open('newurl.html','mywindow');" onmouseover="hoverProject(this)" onmouseleave="mouseLeave(this)">
+                            <!-- <div class="row project ps-4 pe-4" onclick="window.open('newurl.html','mywindow');" onmouseover="hoverProject(this)" onmouseleave="mouseLeave(this)">
                                 <div style="position: relative;">
                                     <div class="project-btn-area">
                                         <span class="project-btn " style="display: none;"><i class="fa fa-chevron-right"></i></span>
@@ -150,7 +150,7 @@
                                         <b>Technology Stack - </b> Laravel Lumen, MySQL, Node.js
                                     </p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </section>
