add picture of havecom project

--- a/project/havecom_p.html
+++ b/project/havecom_p.html
@@ -23,6 +23,15 @@
                 <div class="mb-3">
                     <img src="../res/project/havecom/havecom2.png" alt="" width="100%">
                 </div>
+                <div class="mb-3">
+                    <img src="../res/project/havecom/havecom3.png" alt="" width="100%">
+                </div>
+                <div class="mb-3">
+                    <img src="../res/project/havecom/havecom4.png" alt="" width="100%">
+                </div>
+                <div class="mb-3">
+                    <img src="../res/project/havecom/havecom5.png" alt="" width="100%">
+                </div>
             </div>
         </section>
     </div>
