add new content

--- a/project/emeeting_p.html
+++ b/project/emeeting_p.html
@@ -15,8 +15,7 @@
             <div class="p-4">
                 <h2 class="project-name">E-meeting application</h2>
                 <p>
-                    This is application for web and mobile to management meeting,
-                    This application has many features for the convenience of meeting management. <u>I have developed the backend in this project,</u> database design, API integration and more.
+                    This is an application for web and mobile to management meetings. This application has many features for the convenience of meeting management. <u>I have developed the backend of this project, including database design, API integration, and more.</u>
                 </p>
                 <div class="row">
                     <div class="col-md-4">
@@ -79,7 +78,7 @@
                     <img src="../res/project/emeeting/notification.png" alt="" width="100%">
                 </div>
                 <p>
-                    There is also an email sending feature which includes instant and scheduled emails. 
+                    There is also an email sending feature that includes instant and scheduled emails. 
                     Instant email uses Lumen, but scheduled email uses <a class="link" target="_blank" href="https://nodejs.org/">Node.js</a> 
                     using <a class="link" target="_blank" href="https://www.npmjs.com/package/node-cron">node-cron</a> to deliver emails that are on time. send
                     Use <a class="link" target="_blank" href="https://www.npmjs.com/package/node-cron">Handlebars</a> to create the look of an email and send it using <a class="link" target="_blank" href="https://www.npmjs.com/package/node-cron">Nodemailer</a>.
