--- a/project/havecom_p.html
+++ b/project/havecom_p.html
@@ -15,7 +15,7 @@
             <div class="p-4">
                 <h2 class="project-name">Computer Shop web application</h2>
                 <p>
-                    This is not a real website. It's just a simulated image, but it has the same features as the real thing, have a feature to arrange computer specs and feature of general ecommerce website such as detail of products, cart, purchase history and more
+                    This is not a real website. It's just a simulated image, but it has the same features as the real thing, such as a feature to arrange computer specs and features of a general e-commerce website such as details of products, cart, purchase history, and more.
                 </p>
                 <div class="mb-3">
                     <img src="../res/project/havecom/havecom1.png" alt="" width="100%">
