--- a/project/meteoriteAssault_p.html
+++ b/project/meteoriteAssault_p.html
@@ -13,21 +13,48 @@
     <div class="container">
         <section class="bg-dark mt-4 rounded">
             <div class="p-4">
-                <h2 class="project-name">MeteoriteAssault Game</h2>
+                <div class="row">
+                    <div class="col-sm-8">
+                        <h2 class="project-name">MeteoriteAssault Game</h2>
+                    </div>
+                    <div class="col-md-4 download-project-btn">
+                            <div>
+                                <a class="btn btn-success me-2" href="http://bit.ly/2MDwQ8W" target="_blank">Download</a>
+                            </div>
+                            <div>
+                                <a class="btn btn-info" href="https://github.com/WebGreenTea/MeteoriteAssault" target="_blank">Source</a>
+                            </div>
+                    </div>
+                    
+
+                    <!-- <div class="col-md-4 d-flex justify-content-end">
+                        <a class="btn btn-success me-2" href="http://bit.ly/2MDwQ8W" target="_blank">Download</a>
+                        <a class="btn btn-info" href="https://github.com/WebGreenTea/MeteoriteAssault" target="_blank">Source</a>
+                    </div> -->
+                </div>
+                
                 <p>
-                    A 2D shooting game where players will control a spaceship to shoot meteorites.  
+                    A 2D shooting game where players control a spaceship to shoot meteorites.
+                    <br>
+                    The player has to shoot the meteors to get the most points.
                 </p>
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-3">
                         <img src="../res/project/Mete_Ass/python_game2.png" alt="" width="100%">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-3">
                         <img src="../res/project/Mete_Ass/python_game.png" alt="" width="100%">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-4 mb-3">
                         <img src="../res/project/Mete_Ass/python_game3.png" alt="" width="100%">
                     </div>
                 </div>
+                <p>When shooting meteorites, 3 random items will be dropped.</p>
+                <ul>
+                    <li>Healing items</li>
+                    <li>Upgrade items</li>
+                    <li>Ammunition replenishment items</li>
+                </ul>
             </div>
         </section>
     </div>
