--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container p-3">
             <div class="row d-flex justify-content-center">
                 <div class="col-md-3 col-sm-8 d-flex justify-content-center">
-                    <img class="rounded-pill" src="https://drive.google.com/uc?export=view&id=1bklPuEoHWqyx_KwHfF53Kkl7HlDFq1cz" width="200">
+                    <img class="rounded-pill" src="res/profile/profile.png" width="200">
                 </div>
                 <div class="col-md-9 col-sm-9 p-2">
                     <div class="headerbox">
@@ -46,7 +46,7 @@
                             <p>
                                 Junior back-end developer
                             </p>
-                            <p>
+                            <!-- <p>
                                 <b class="sub-header">Skills</b>
                                 <br>
                                 <b>Languages:</b> PHP, Javascript, Python, C++, Java.
@@ -57,7 +57,38 @@
                                 <br>
                                 <b>Tools:</b> DBeaver, Postman, Docker, Git.
                                 <br>
-                            </p>
+                            </p> -->
+                            <table class="table table-dark">
+                                <thead>
+                                  <tr>
+                                    <th scope="col"><b class="sub-header">Skills</b></th>
+                                    <th scope="col">Good</th>
+                                    <th scope="col">Basic</th>
+                                  </tr>
+                                </thead>
+                                <tbody>
+                                  <tr>
+                                    <th scope="row">Languages</th>
+                                    <td>PHP, Javascript, Python</td>
+                                    <td>C++, Java</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Frameworks</th>
+                                    <td>Laravel Lumen, Express.js, Flask</td>
+                                    <td>Vue.js, Flutter</td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Datebase</th>
+                                    <td>MySQL, MongoDB</td>
+                                    <td></td>
+                                  </tr>
+                                  <tr>
+                                    <th scope="row">Tools</th>
+                                    <td>DBeaver, Postman, Docker, Git</td>
+                                    <td></td>
+                                  </tr>
+                                </tbody>
+                              </table>
                         </div>
                     </div>
                 </section>
@@ -74,7 +105,7 @@
                                     <p class="mt-2">
                                         <b class="project-name">E-meeting web application</b>
                                         <br>
-                                        This is application for web and mobile to management meeting, I have developed the backend in this project, database design, API integration and more.
+                                        This is an application for web and mobile to management meetings. I have developed the backend of this project, including database design, API integration, and more.
                                         <br>
                                         <b>Technology Stack - </b> Laravel Lumen, MySQL, Node.js, Onesignal
                                         <div class="row">
@@ -97,8 +128,7 @@
                                     <p class="mt-2">
                                         <b class="project-name">Computer Shop web application</b>
                                         <br>
-                                        This is not a real website. It's just a simulated image, but it has the same features as the real thing,
-                                        have a feature to arrange computer specs and feature of general ecommerce website such as detail of products, cart, purchase history and more
+                                        This is not a real website. It's just a simulated image, but it has the same features as the real thing, such as a feature to arrange computer specs and features of a general e-commerce website such as details of products, cart, purchase history, and more.
                                         <br>
                                         <b>Technology Stack - </b> Vue.js, MongoDB, Node.js
                                         <div class="row">
@@ -120,7 +150,7 @@
                                     <p class="mt-2">
                                         <b class="project-name">MeteoriteAssault Game</b>
                                         <br>
-                                        A 2D shooting game where players will control a spaceship to shoot meteorites.
+                                        A 2D shooting game where players control a spaceship to shoot meteorites.
                                         <br>
                                         <b>Technology Stack - </b> Python, Pygame
                                         <div class="row">
@@ -137,20 +167,20 @@
                                     </p>
                                 </div>
                             </div>
-                            <!-- <div class="row project ps-4 pe-4" onclick="window.open('newurl.html','mywindow');" onmouseover="hoverProject(this)" onmouseleave="mouseLeave(this)">
+                            <div class="row project ps-4 pe-4" onclick="location.href='project/think2grow_p.html'" onmouseover="hoverProject(this)" onmouseleave="mouseLeave(this)">
                                 <div style="position: relative;">
                                     <div class="project-btn-area">
                                         <span class="project-btn " style="display: none;"><i class="fa fa-chevron-right"></i></span>
                                     </div>
                                     <p class="mt-2">
-                                        <b class="project-name">E-meeting web application</b>
+                                        <b class="project-name">Think2Grow android game application</b>
                                         <br>
-                                        Back-end of e-meeting web application
+                                        A brain training game. which is a tree raising game by answering math problems.
                                         <br>
-                                        <b>Technology Stack - </b> Laravel Lumen, MySQL, Node.js
+                                        <b>Technology Stack - </b> Java
                                     </p>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </section>
