--- a/project/emeeting_p.html
+++ b/project/emeeting_p.html
@@ -69,7 +69,7 @@
                     and choose to use Relational Database as <a href="https://www.mysql.com/" class="link" target="_blank">MySQL</a>.
                 </p>
                 <div class="d-flex justify-content-center mb-3">
-                    <img src="../res/project/emeeting/arc.png" alt="" width="100%">
+                    <img src="../res/project/emeeting/arc.png" alt="" class="project-img-auto-width">
                 </div>
                 <p>
                     Use the <a href="https://onesignal.com/" class="link" target="_blank">Onesignal</a> service to send notifications to mobile application users.
