--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <div class="bg-dark">
         <div class="container p-3">
             <div class="row d-flex justify-content-center">
-                <div class="col-md-3 col-sm-8 d-flex justify-content-center">
+                <div class="col-lg-3 col-md-4  d-flex justify-content-center">
                     <img class="rounded-pill" src="res/profile/profile.png" width="200">
                 </div>
-                <div class="col-md-9 col-sm-9 p-2">
+                <div class="col-lg-9 col-md-8 p-2">
                     <div class="headerbox">
                         <h1>Sahawuth Boonyurn</h1>
                     </div>
@@ -38,13 +38,14 @@
     </div>
     <div class="container">
         <div class="row mb-5">
-            <div class="primary col-md-8" >
+            <div class="primary col-lg-8 col-md-12 col-sm-12" >
                 <section class="bg-dark mt-4 rounded">
                     <div class="p-4">
                         <h2 class="mb-3">About Me</h2>
                         <div>
                             <p>
-                                Junior back-end developer
+                                I'm a Junior back-end developer. I'm ready to learn new things
+
                             </p>
                             <!-- <p>
                                 <b class="sub-header">Skills</b>
@@ -185,7 +186,17 @@
                     </div>
                 </section>
             </div>
-            <div class="secondary col-md-4">
+            <div class="secondary col-lg-4 col-md-12 col-sm-12">
+                <section class="bg-dark mt-4 rounded">
+                    <div class="p-4">
+                        <div class="mb-3 d-flex align-items-center">
+                            <i class="fa fa-envelope"></i> <a href="mailto:sahawuth.boonyurn@gmail.com" class="link ms-2">sahawuth.boonyurn@gmail.com</a>
+                        </div>
+                        <div class=" d-flex align-items-center">
+                            <i class="fa fa-file-pdf-o"></i> <a href="https://drive.google.com/file/d/1FC9BTdRoHl2su9HEyaodolQ9NQOqQsXK/view?usp=drive_link" class="link ms-2" target="_blank">Download Resume</a>
+                        </div>
+                    </div>
+                </section>
                 <section class="bg-dark mt-4 rounded">
                     <div class="p-4">
                         <h2 class="mb-3">Education</h2>
