--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@
                                     </p>
                                 </div>
                             </div>
+                            <div class="row project ps-4 pe-4" onclick="location.href='project/classify_dog_p.html'" onmouseover="hoverProject(this)" onmouseleave="mouseLeave(this)">
+                                <div style="position: relative;">
+                                    <div class="project-btn-area">
+                                        <span class="project-btn " style="display: none;"><i class="fa fa-chevron-right"></i></span>
+                                    </div>
+                                    <p class="mt-2">
+                                        <b class="project-name">Application to classify 4 dog breeds from image files</b>
+                                        <br>
+                                        <!-- A brain training game. which is a tree raising game by answering math problems. -->
+                                        <br>
+                                        <b>Technology Stack - </b> Python
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
