--- a/project/classify_dog_p.html
+++ b/project/classify_dog_p.html
@@ -14,9 +14,18 @@
         <section class="bg-dark mt-4 rounded">
             <div class="p-4">
                 <h2 class="project-name">Application to classify 4 dog breeds from image files</h2>
+                <div class="mb-3"><b>Technology Stack - </b>&nbsp;Python, TensorFlow</div>
                 <p>
                     <!-- A brain training game. which is a tree raising game by answering math problems. -->
                 </p>
+                <div class="mb-3 row">
+                    <div class="col-lg-6 col-md-12 mb-3">
+                        <img src="../res/project/dog_classify/1.png" alt="" width="100%">                        
+                    </div>
+                    <div class="col-lg-6 col-md-12">
+                        <img src="../res/project/dog_classify/2.png" alt="" width="100%">                        
+                    </div>
+                </div>
             </div>
         </section>
     </div>
