--- a/project/emeeting_p.html
+++ b/project/emeeting_p.html
@@ -14,6 +14,7 @@
         <section class="bg-dark mt-4 rounded">
             <div class="p-4">
                 <h2 class="project-name">E-meeting application</h2>
+                <div class="mb-3"><b>Technology Stack - </b>&nbsp;Laravel Lumen, MySQL, Node.js, Onesignal</div>
                 <p>
                     This is an application for web and mobile to management meetings. This application has many features for the convenience of meeting management. <u>I have developed the backend of this project, including database design, API integration, and more.</u>
                 </p>
