--- a/project/havecom_p.html
+++ b/project/havecom_p.html
@@ -14,6 +14,7 @@
         <section class="bg-dark mt-4 rounded">
             <div class="p-4">
                 <h2 class="project-name">Computer Shop web application</h2>
+                <div class="mb-3"><b>Technology Stack - </b>&nbsp;Vue.js, MongoDB, Node.js</div>
                 <p>
                     This is not a real website. It's just a simulated image, but it has the same features as the real thing, such as a feature to arrange computer specs and features of a general e-commerce website such as details of products, cart, purchase history, and more.
                 </p>
