--- a/project/think2grow_p.html
+++ b/project/think2grow_p.html
@@ -14,9 +14,67 @@
         <section class="bg-dark mt-4 rounded">
             <div class="p-4">
                 <h2 class="project-name">Think2Grow android game application</h2>
+                <div class="mb-3"><b>Technology Stack - </b>&nbsp;Java</div>
                 <p>
                     A brain training game. which is a tree raising game by answering math problems.
                 </p>
+                <div class="row ps-4 pe-4">
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/1.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/12.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/11.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/6.png" alt="" width="100%">
+                    </div>
+                </div>
+                <p class="mt-4">
+                    Players have to solve math problems to exchange coins and bring coins to buy water and fertilizer for the tree so that it grows and doesn't die.
+                </p>
+                <div class="row ps-4 pe-4">
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/15.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/7.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/4.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/5.png" alt="" width="100%">
+                    </div>
+                </div>
+                <p class="mt-4">
+                    The player can choose the difficulty level of the math problem.
+                </p>
+                <div class="row ps-4 pe-4">
+                    <div class="col-3 mb-3"></div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/10.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/11.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3"></div>
+                </div>
+                <p class="mt-4">
+                    If the tree lacks water, it will eventually get sick and die.
+                </p>
+                <div class="row ps-4 pe-4">
+                    <div class="col-3 mb-3"></div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/2.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3">
+                        <img src="../res/project/think2grow/3.png" alt="" width="100%">
+                    </div>
+                    <div class="col-3 mb-3"></div>
+                </div>
             </div>
         </section>
     </div>
