--- a/project/meteoriteAssault_p.html
+++ b/project/meteoriteAssault_p.html
@@ -16,7 +16,11 @@
                 <div class="row">
                     <div class="col-sm-8">
                         <h2 class="project-name">MeteoriteAssault Game</h2>
+                        <div class="mb-3"><b>Technology Stack - </b>&nbsp;Python, Pygame</div>
                     </div>
+                    <!-- <div class="col-md-4 d-flex justify-content-end align-items-center">
+                        <div><b>Technology Stack - </b>&nbsp;Python, Pygame</div>
+                    </div> -->
                     <div class="col-md-4 download-project-btn">
                             <div>
                                 <a class="btn btn-success me-2" href="http://bit.ly/2MDwQ8W" target="_blank">Download</a>
