--- a/project/classify_dog_p.html
+++ b/project/classify_dog_p.html
@@ -16,7 +16,7 @@
                 <h2 class="project-name">Application to classify 4 dog breeds from image files</h2>
                 <div class="mb-3"><b>Technology Stack - </b>&nbsp;Python, TensorFlow</div>
                 <p>
-                    <!-- A brain training game. which is a tree raising game by answering math problems. -->
+                    classify 4 dog breeds from the image files.
                 </p>
                 <div class="mb-3 row">
                     <div class="col-lg-6 col-md-12 mb-3">
