--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <tbody>
                                   <tr>
                                     <th scope="row">Languages</th>
-                                    <td>PHP, Javascript, Python</td>
+                                    <td>PHP, Javascript, Python, HTML</td>
                                     <td>C++, Java</td>
                                   </tr>
                                   <tr>
