--- a/index.html
+++ b/index.html
@@ -255,16 +255,29 @@
                         </div>
                     </div>
                 </section>
-                <!-- <section class="bg-dark mt-4 rounded">
+                <section class="bg-dark mt-4 rounded">
                     <div class="p-4">
                         <h2 class="mb-3">Certificate</h2>
                         <div class="ms-3">
                             <p class="righttext">
-                                <a class="link" href=""><b>GitHub for Developer</b></a>
+                                <a class="link" href="" data-bs-toggle="modal" data-bs-target="#cer1"><b>GitHub for Developer</b></a>
                             </p>
+                            <div class="modal fade" id="cer1" tabindex="-1" aria-hidden="true">
+                                <div class="modal-dialog modal-xl">
+                                <div class="modal-content bg-dark">
+                                    <div class="modal-header">
+                                    <h1 class="modal-title fs-5" id="exampleModalLabel">GitHub for Developer</h1>
+                                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <img src="res/certificate/borntodev-acdemy_GitHub for Developer _certifiacte.png" alt="" width="100%">
+                                    </div>
+                                </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </section> -->
+                </section>
             </div>
         </div>
     </div>
