--- a/index.html
+++ b/index.html
@@ -75,12 +75,12 @@
                                   <tr>
                                     <th scope="row">Languages</th>
                                     <td>PHP, Javascript, Python, HTML</td>
-                                    <td>C++, Java</td>
+                                    <td>C++, Java, CSS</td>
                                   </tr>
                                   <tr>
                                     <th scope="row">Frameworks</th>
                                     <td>Laravel Lumen, Express.js, Flask</td>
-                                    <td>Vue.js, Flutter</td>
+                                    <td>Vue.js, Flutter, Bootstrap </td>
                                   </tr>
                                   <tr>
                                     <th scope="row">Datebase</th>
