--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="col-lg-3 col-md-4 d-flex justify-content-center">
             <img
               class="rounded-pill"
-              src="res/profile/profile.png"
+              src="res/profile/profile2.jpg"
               width="200"
             />
           </div>
@@ -107,6 +107,7 @@
                   <thead>
                     <tr>
                       <th scope="col"><b class="sub-header">Skills</b></th>
+                      <th scope="col">Strong</th>
                       <th scope="col">Good</th>
                       <th scope="col">Basic</th>
                     </tr>
@@ -114,22 +115,29 @@
                   <tbody>
                     <tr>
                       <th scope="row">Languages</th>
-                      <td>PHP, Javascript, Typescript, Python, HTML</td>
+                      <td>PHP, Javascript, Typescript,</td>
+                      <td>Python, HTML</td>
                       <td>C++, Java, CSS</td>
                     </tr>
                     <tr>
-                      <th scope="row">Frameworks</th>
-                      <td>Laravel Lumen, Express.js, AdonisJS, Flask</td>
-                      <td>Vue.js, Flutter, Bootstrap</td>
+                      <th scope="row">Frameworks and Platforms</th>
+                      <td>Node.js, AdonisJS, Laravel Lumen</td>
+                      <td>Express, Flask</td>
+                      <td>
+                        Bun, ElysiaJS, Vue.js, Nuxt.js, Vuetify, Flutter,
+                        Bootstrap
+                      </td>
                     </tr>
                     <tr>
                       <th scope="row">Datebase</th>
-                      <td>MySQL, PostgreSQL, MongoDB</td>
+                      <td>MySQL, PostgreSQL</td>
+                      <td>Redis, MongoDB</td>
                       <td></td>
                     </tr>
                     <tr>
-                      <th scope="row">Tools</th>
-                      <td>DBeaver, Postman, Docker, Git</td>
+                      <th scope="row">Tools and Other</th>
+                      <td>DBeaver</td>
+                      <td>Postman, Docker, Git, Line Messaging API</td>
                       <td></td>
                     </tr>
                   </tbody>
