--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       </td>
                     </tr>
                     <tr>
-                      <th scope="row">Datebase</th>
+                      <th scope="row">Database</th>
                       <td>MySQL, PostgreSQL</td>
                       <td>Redis, MongoDB</td>
                       <td></td>
